--- a/settings.conf
+++ b/settings.conf
@@ -6,11 +6,11 @@
 
 # Tips:
 num_of_tips = 1
-tip1 = &lt;?: Create a launcher from the application menu &gt;
+tip1 = Entry Help section for any questions
 
 # App variables:
 app_name = Steam Skin Manager
-version = 4.0.3-1
+version = 4.0.4
 version_attribute = New Generation
 
 # Paths:
@@ -18,6 +18,7 @@ ui_path = share/steam-skin-manager/ui.glade
 data_path = share/steam-skin-manager/
 themes_path = share/steam/skins/
 user_path = .local/share/SteamSkinManager/
+old_theme_path = /usr/share/steam/skins/
 
 steamskinapplier = bin/steamskinapplier.sh
 steamdecorator = bin/steamdecorator.sh
@@ -26,4 +27,4 @@ steamdecorator = bin/steamdecorator.sh
 help_html = help/help.html
 
 # Commands:
-system_theme = gsettings get org.gnome.desktop.interface gtk-theme | sed "s/'\\(.*\\)'/\\1/" | tr -d "\n"
+system_theme = gsettings get org.gnome.desktop.interface gtk-theme | sed "s/'\\(.*\\)'/\\1/"
