--- a/settings.conf
+++ b/settings.conf
@@ -6,11 +6,11 @@
 
 # Tips:
 num_of_tips = 1
-tip1 = Entry Help section for any questions
+tip1 = Visit Help section for more information
 
 # App variables:
 app_name = Steam Skin Manager
-version = 4.0.4
+version = 4.0.5
 version_attribute = New Generation
 
 # Paths:
