--- a/settings.conf
+++ b/settings.conf
@@ -10,14 +10,14 @@ tip1 = Visit Help section for more information
 
 # App variables:
 app_name = Steam Skin Manager
-version = 4.0.5
+version = 4.1
 version_attribute = New Generation
 
 # Paths:
 ui_path = share/steam-skin-manager/ui.glade
 data_path = share/steam-skin-manager/
 themes_path = share/steam/skins/
-user_path = .local/share/SteamSkinManager/
+ucfg_path = .local/share/SteamSkinManager/
 old_theme_path = /usr/share/steam/skins/
 
 steamskinapplier = bin/steamskinapplier.sh
