--- a/settings.conf
+++ b/settings.conf
@@ -10,7 +10,7 @@ tip1 = Visit Help section for more information
 
 # App variables:
 app_name = Steam Skin Manager
-version = 4.1.2
+version = 4.1.3_fixedThanksTo_AlinAndrei
 version_attribute = New Generation
 
 # Paths:
