--- a/settings.conf
+++ b/settings.conf
@@ -6,8 +6,10 @@
 
 # App variables:
 app_name = Steam Skin Manager
-version = 4.2.1
+version = 4.2.1-1
 version_attribute = New Generation
+# Set "remove_launcher_generator = yes" to remove this option from app's menu.
+remove_launcher_generator = no
 
 # Paths:
 ui_path = share/steam-skin-manager/ui.glade
@@ -18,6 +20,7 @@ old_theme_path = /usr/share/steam/skins/
 
 steamskinapplier = bin/steamskinapplier.sh
 steamdecorator = bin/steamdecorator.sh
+launchergenerator = bin/GenerateLauncher.sh
 
 # WebView homepage
 help_html = help/help.html
