--- a/settings.conf
+++ b/settings.conf
@@ -6,7 +6,7 @@
 
 # App variables:
 app_name = Steam Skin Manager
-version = 4.2.1-1
+version = 4.3.0-dev
 version_attribute = New Generation
 # Set "remove_launcher_generator = yes" to remove this option from app's menu.
 remove_launcher_generator = no
