--- a/settings.conf
+++ b/settings.conf
@@ -6,8 +6,10 @@
 
 # App variables:
 app_name = Steam Skin Manager
-version = 4.3.0-dev
+version = 4.2.2
 version_attribute = New Generation
+# "true" enables possible future release features if any. Such features may not be working and were not tested yet!
+preview = false
 # Set "remove_launcher_generator = yes" to remove this option from app's menu.
 remove_launcher_generator = no
 
